# school-fastapi

./: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt  test.py
