[tool.poetry]
name = "school-fastapi"
version = "0.1.0"
description = ""
authors = ["Nergis <me@nergis.dev>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.10.0"
mypy = "^1.13.0"
fastapi = {extras = ["all"], version = "^0.115.6"}
pycomcigan = "^1.3.0"
feedparser = "^6.0.11"
beautifulsoup4 = "^4.12.3"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
